--- a/recomended-post.html
+++ b/recomended-post.html
@@ -13,6 +13,17 @@ a){var b=F.exec(a);b&&(b[1]=(b[1]||"").toLowerCase(),b[3]=b[3]&&new RegExp("(?:^
  </script>
 <link href='https://fonts.googleapis.com/css?family=Roboto:100,200,300,400italic,400,500,500italic,700,700italic,900%7CMaterial+Icons' rel='stylesheet' type='text/css'/>
 <style>
+<script type="text/javascript">
+//<![CDATA[
+$(document).ready(function()
+{
+if($("#blogger").attr("href")!="https://www.opzite.com/")
+{
+window.location.href="https://www.opzite.com";
+}
+});
+//]]>
+</script>	
 body {
   background-color:white;
   margin:0;
